movie date fixed and alignment too

--- a/src/app/Admin/admin-movielist/admin-movielist.component.css
+++ b/src/app/Admin/admin-movielist/admin-movielist.component.css
@@ -8,3 +8,8 @@
     transition: 0.3s;
     transform: scale(1.01);
 }
+
+
+.center-align {
+    text-align: center;
+}
